--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "scripts": {
         "build-dev": "npx rollup --config rollup.config.js",
         "build": "npx rollup --config rollup.config.js",
-        "test": "npx mocha -r ./ts-node-test.js --watch-extensions ts,tsx src/**/*.test.ts --full-trace",
+        "test": "npx mocha -r ./ts-node-test.js --watch-extensions ts,tsx \"src/**/*.test.ts\" --full-trace",
         "typecheck": "npx tsc --project tsconfig.json --noEmit",
-        "format": "npx prettier --config \".prettierrc.json\" --write **/*.{json,js,ts}"
+        "benchmark": "npx node -r ./ts-node-test.js ./benchmarks/ordmap.ts"
     },
     "devDependencies": {
+        "@types/benchmark": "^1.0.31",
         "@types/chai": "^4.1.6",
         "@types/mocha": "^5.2.5",
         "@types/node": "^10.12.0",
         "@types/rollup": "^0.54.0",
         "assert": "^1.4.1",
+        "benchmark": "^2.1.4",
         "chai": "^4.2.0",
+        "immutable": "^3.8.2",
         "jsverify": "^0.8.3",
         "mocha": "^5.2.0",
         "node": "^10.12.0",
