--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
     "version": "1.0.0",
     "description": "persistent ordered map and set with a focus on typescript integration and performance",
     "license": "MIT",
+    "author": {
+        "name": "Kári Frederiksen",
+        "url": "https://github.com/karifrederiksen"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/karifrederiksen/ordered-collections"
     },
-    "main": "dist/index.js",
+    "bugs": {
+        "url": "https://github.com/karifrederiksen/ordered-collections/issues"
+    },
+    "main": "src/index.ts",
     "scripts": {
         "build-dev": "npx rollup --config rollup.config.js",
         "build": "npx rollup --config rollup.config.js",
