--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bugs": {
         "url": "https://github.com/karifrederiksen/ordered-collections/issues"
     },
-    "main": "src/index.ts",
+    "main": "dist/index.js",
+    "sideEffects": false,
     "scripts": {
         "build-dev": "npx rollup --config rollup.config.js",
         "build": "npx rollup --config rollup.config.js",
