--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es2015",
         "module": "esnext",
-        "lib": ["dom", "es5", "es2015.iterable"],
+        "lib": ["dom", "es5", "es2015"],
         "moduleResolution": "node",
-        "downlevelIteration": true,
         "rootDir": "src",
         "declaration": true,
         "sourceMap": true,
