--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "main": "dist/index.js",
     "sideEffects": false,
     "scripts": {
-        "build": "npx rollup --config rollup.config.js",
-        "test": "npx mocha -r ./ts-node-test.js -r mocha-clean --watch-extensions ts,tsx \"src/**/*.test.ts\" --use_strict ",
-        "typecheck": "npx tsc --project tsconfig.json --noEmit",
-        "benchmark": "npx node -r ./ts-node-test.js ./benchmarks/ordmap.ts"
+        "build": "rollup --config rollup.config.js",
+        "test": "mocha -r ./ts-node-test.js -r mocha-clean --watch-extensions ts,tsx \"src/**/*.test.ts\" --use_strict ",
+        "typecheck": "tsc --project tsconfig.json --noEmit",
+        "benchmark": "node -r ./ts-node-test.js ./benchmarks/ordmap.ts"
     },
     "devDependencies": {
         "@types/benchmark": "^1.0.31",
@@ -38,9 +38,8 @@
         "prettier": "^1.14.3",
         "rollup": "^0.66.6",
         "rollup-plugin-typescript2": "^0.17.2",
-        "ts-node": "^7.0.1",
+        "ts-node": "^9.1.1",
         "tslib": "^1.9.3",
-        "typescript": "^3.1.3"
-    },
-    "dependencies": {}
+        "typescript": "^4.2.4"
+    }
 }
