--- a/package.json
+++ b/package.json
@@ -23,23 +23,21 @@
         "benchmark": "node -r ./ts-node-test.js ./benchmarks/ordmap.ts"
     },
     "devDependencies": {
-        "@types/benchmark": "^1.0.31",
-        "@types/chai": "^4.1.7",
-        "@types/mocha": "^5.2.5",
-        "@types/node": "^10.12.0",
-        "@types/rollup": "^0.54.0",
-        "benchmark": "^2.1.4",
-        "chai": "^4.2.0",
-        "immutable": "^3.8.2",
-        "jsverify": "^0.8.3",
-        "mocha": "^5.2.0",
-        "mocha-clean": "^1.0.0",
-        "node": "^10.12.0",
-        "prettier": "^1.14.3",
-        "rollup": "^0.66.6",
-        "rollup-plugin-typescript2": "^0.17.2",
-        "ts-node": "^9.1.1",
-        "tslib": "^1.9.3",
-        "typescript": "^4.2.4"
+        "@types/benchmark": "2.1.0",
+        "@types/chai": "4.2.16",
+        "@types/mocha": "5.2.5",
+        "@types/node": "14.14.37",
+        "benchmark": "2.1.4",
+        "chai": "4.3.4",
+        "immutable": "4.0.0-rc.12",
+        "jsverify": "0.8.4",
+        "mocha": "8.3.2",
+        "mocha-clean": "1.0.0",
+        "node": "15.12.0",
+        "rollup": "2.45.2",
+        "rollup-plugin-typescript2": "0.30.0",
+        "ts-node": "9.1.1",
+        "tslib": "2.2.0",
+        "typescript": "4.2.4"
     }
 }
